--- a/.sample.env
+++ b/.sample.env
@@ -2,3 +2,4 @@
 WORKSPACE_NAME=<YOUR WORKSPACE NAME>
 RESOURCE_GROUP_NAME=<YOUR RESOURCE GROUP NAME>
 SUBSCRIPTION_ID=<YOUR SUBSCRIPTION ID>
+TENANT_ID=<YOUR TENANT ID>
