--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -1,10 +1,10 @@
-azure-ai-ml
-azure-cli
-azure-identity
-azureml-fsspec
-scikit-learn
 ipykernel
-mltable
-python-dotenv
-mlflow
 azureml-mlflow
+mlflow
+mltable>=1.2.0
+pillow
+wheel
+scikit-learn~=1.0.0
+azure-ai-ml
+azure-identity
+python-dotenv
