--- a/environment/local_conda.yaml
+++ b/environment/local_conda.yaml
@@ -2,9 +2,10 @@ name: many_models
 channels:
   - conda-forge
 dependencies:
-  - python=3.8
-  - numpy=1.21.2
-  - pip=21.2.4
-  - pandas>=1.1,<1.2
-  - pip:
-    - -r requirements.txt
+- python=3.8
+- pip=21.3.1
+- pandas~=1.3.0
+- scipy~=1.10.0
+- numpy~=1.22.0
+- pip:
+  - -r requirements.txt
