feedback pipeline w/ aml designer lab dev complete

--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -1,11 +1,15 @@
-ipykernel
 azureml-mlflow
 mlflow
 mltable>=1.2.0
-pillow
+azureml-dataset-runtime[pandas,fuse]
+azureml-telemetry
+pandas
+numpy
 wheel
-scikit-learn~=1.0.0
+pillow
 azure-ai-ml
 azure-identity
-python-dotenv
-fsspec
+cloudpickle==1.1.1
+tensorflow==2.1.4
+ipykernel
+scikit-learn~=0.20.0
