--- a/environment/local_conda.yaml
+++ b/environment/local_conda.yaml
@@ -2,10 +2,8 @@ name: many_models
 channels:
   - conda-forge
 dependencies:
-- python=3.8
-- pip=21.3.1
-- pandas~=1.3.0
-- scipy~=1.10.0
-- numpy~=1.22.0
+  - python=3.7.6
+  - pip
+  - pip:
 - pip:
   - -r requirements.txt
